# cloud-control-bot

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
assets/screenshots/: README.md
src/: container.py  exceptions.py
src/background_tasks/: __init__.py  balance_checker.py  servers_sync.py  service_checks.py
src/bot/: app.py  notifications.py
src/bot/filters/: menu.py
src/bot/formatters/: __init__.py  balance.py  checks.py  monitoring.py
src/bot/i18n/: __init__.py  errors.py
src/bot/i18n/locales/: en.py  es.py  ru.py  uk.py
src/bot/keyboards/: __init__.py  inline.py
src/bot/routers/: __init__.py  balance.py  checks.py  monitoring.py  servers.py  settings.py
src/bot/utils/: __init__.py  error_handler.py  server_lookup.py
src/checks/: __init__.py  http.py  outcome.py  ssl_expiry.py  target.py  tcp.py
src/config/: config.yaml  settings.py
src/models/: __init__.py  ping_result.py  provider.py  server.py  service_check.py
src/monitoring/: __init__.py
src/providers/: aws.py  factory.py  vultr.py
src/storage/: balance.py  base.py  runtime_settings.py  servers.py  service_checks_store.py  sqlite_statistics.py
src/utils/: log_cleaner.py
